--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -1,5 +1,6 @@
 winget install -e --id OpenJS.NodeJS
 winget install -e --id vim.vim
+winget install -e --id Git.Git
 
 winget install -e --id Microsoft.VisualStudioCode
 winget install -e --id Microsoft.VisualStudio.2022.Enterprise-Preview
@@ -10,3 +11,8 @@ winget install -e --id SlackTechnologies.Slack
 winget install -e --id VideoLAN.VLC
 winget install -e --id Spotify.Spotify
 winget install -e --id BlenderFoundation.Blender
+
+#winget install -e --id AgileBits.1Password
+
+
+winget install -e --id=ArduinoSA.ArduinoIDE
