--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -4,6 +4,7 @@ winget install -e --id Git.Git
 
 winget install -e --id Microsoft.VisualStudioCode
 winget install -e --id Microsoft.VisualStudio.2022.Enterprise-Preview
+winget install -e --id Microsoft.Teams
 
 winget install -e --id Mozilla.Firefox
 winget install -e --id Google.Chrome
