--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -14,6 +14,7 @@ winget install -e --id Spotify.Spotify
 winget install -e --id BlenderFoundation.Blender
 
 #winget install -e --id AgileBits.1Password
+winget install -e --id TeamViewer.TeamViewer
 
 
 winget install -e --id=ArduinoSA.ArduinoIDE
