--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -2,19 +2,30 @@ winget install -e --id OpenJS.NodeJS
 winget install -e --id vim.vim
 winget install -e --id Git.Git
 
+winget install -e --id Python.Python.3.11
+winget install -e --id Rustlang.Rustup
+winget install -e --id=MSYS2.MSYS2
+
+winget install -e --id 7zip.7zip
+
 winget install -e --id Microsoft.VisualStudioCode
 winget install -e --id Microsoft.VisualStudio.2022.Enterprise-Preview
+winget install -e --id=ArduinoSA.IDE.beta
 winget install -e --id Microsoft.Teams
 
 winget install -e --id Mozilla.Firefox
 winget install -e --id Google.Chrome
 winget install -e --id SlackTechnologies.Slack
+winget install -e --id=Discord.Discord
 winget install -e --id VideoLAN.VLC
 winget install -e --id Spotify.Spotify
 winget install -e --id BlenderFoundation.Blender
 
-#winget install -e --id AgileBits.1Password
+winget install -e --id AgileBits.1Password
 winget install -e --id TeamViewer.TeamViewer
 
 
 winget install -e --id=ArduinoSA.ArduinoIDE
+
+
+wsl --install
