--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -21,6 +21,8 @@ winget install -e --id VideoLAN.VLC
 winget install -e --id Spotify.Spotify
 winget install -e --id BlenderFoundation.Blender
 
+winget install --id=vvvv.gamma  -e
+
 winget install -e --id AgileBits.1Password
 winget install -e --id TeamViewer.TeamViewer
 
