--- a/scripts/install.ps
+++ b/scripts/install.ps
@@ -15,6 +15,7 @@ winget install -e --id Microsoft.Teams
 
 winget install -e --id Mozilla.Firefox
 winget install -e --id Google.Chrome
+winget install --id=Brave.Brave  -e
 winget install -e --id SlackTechnologies.Slack
 winget install -e --id=Discord.Discord
 winget install -e --id VideoLAN.VLC
